--- a/4.2-react-simple-webpage/src/styles/register.css
+++ b/4.2-react-simple-webpage/src/styles/register.css
@@ -31,7 +31,7 @@ body {
   flex-wrap: wrap;
 }
 
-.specialcolor {
+/* .specialcolor {
   color: rgb(255, 106, 106);
 }
 
@@ -40,7 +40,7 @@ body {
   color: rgb(209, 181, 255);
 
   margin: 10px 0;
-}
+} */
 
 .notes p {
   margin: 0;
